--- a/restaurant/templates/home.html
+++ b/restaurant/templates/home.html
@@ -1122,13 +1122,13 @@
                                                                 <label class="custom-control-label" for="customCheck1">&nbsp;</label>
                                                             </div>
                                                         </th>
-                                                        <th>Order ID</th>
-                                                        <th>Billing Name</th>
-                                                        <th>Date</th>
-                                                        <th>Total</th>
+                                                        <th>Sale ID</th>
+                                                        <th>Customer Name</th>
+                                                        <th>Date and Time</th>
+                                                        <th>Amount Paid</th>
                                                         <th>Payment Status</th>
                                                         <th>Payment Method</th>
-                                                        <th>View Details</th>
+                                                        <th>View Order Details</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
