Few changes on users login

--- a/restaurant/templates/users/login.html
+++ b/restaurant/templates/users/login.html
@@ -3,6 +3,7 @@
 
 {% block head_content %}
 <title>Sign in</title>
+
 {% endblock%}
 
 {% block container %}
@@ -35,11 +36,11 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 col-xl-5">
                     <div class="card overflow-hidden">
-                        <div class="bg-soft-primary">
+                        <div class="poteiros">
                             <div class="row">
                                 <div class="col-7">
-                                    <div class="text-primary p-4">
-                                        <h5 class="text-primary">Welcome Back !</h5>
+                                    <div class="text-pot p-4">
+                                        <h5 class="text-pot">Welcome Back !</h5>
                                         <p>Sign in to continue to your restaurant account.</p>
                                     </div>
                                 </div>
