--- a/restaurant/templates/users/base.html
+++ b/restaurant/templates/users/base.html
@@ -17,6 +17,14 @@
     <link href="{% static 'css/icons.min.css' %}" rel="stylesheet" type="text/css" />
     <!-- App Css-->
     <link href="{% static 'css/app.min.css' %}" id="app-style" rel="stylesheet" type="text/css" />
+     <!-- Main Css-->
+     <link href="{% static 'css/main.css' %}" id="app-style" rel="stylesheet" type="text/css" />
+
+     <style>
+        .text-pot {
+                color: black !important;
+        }
+    </style>
 </head>
 
 <body>
