--- a/restaurant/templates/home.html
+++ b/restaurant/templates/home.html
@@ -31,11 +31,11 @@
         <!-- <div id="layout-wrapper"> -->
 
             <header id="page-topbar">
-                <div class="navbar-header pr-2">
+                <div class="navbar-header">
                     <div class="d-flex">
                         <!-- LOGO -->
                         <!-- <div class="navbar-brand-box"> -->
-                            <a href="index.html" class="logo logo-dark">
+                            <!-- <a href="index.html" class="logo logo-dark">
                                 <span class="logo-sm">
                                     <img src="assets/images/logo.svg" alt="" height="22">
                                 </span>
@@ -51,11 +51,27 @@
                                 <span class="logo-lg">
                                     <img src="assets/images/logo-light.png" alt="" height="19">
                                 </span>
-                            </a>
+                            </a> -->
                         <!-- </div> -->
 
                         <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
                             <i class="fa fa-fw fa-bars"></i>
+                        </button>
+
+                        <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
+                            <i class="fa bx bx-line-chart "></i>
+                        </button>
+
+                        <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
+                            <i class="fa fa-fw bx bx-food-menu "></i>
+                        </button>
+
+                        <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
+                            <i class="fa fa-fw bx bxs-truck "></i>
+                        </button>
+
+                        <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
+                            <i class="fa fa-fw bx bxs-calculator"></i>
                         </button>
 
                         <!-- App Search-->
