Nav-bar improved

--- a/restaurant/templates/home.html
+++ b/restaurant/templates/home.html
@@ -62,7 +62,7 @@
                             <i class="fa bx bx-line-chart "></i>
                         </button>
 
-                        <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
+                        <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn" href = "{% url 'ingredients:stocklist' %}">
                             <i class="fa fa-fw bx bx-food-menu "></i>
                         </button>
 
