--- a/restaurant/templates/home.html
+++ b/restaurant/templates/home.html
@@ -2,9 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
-        
         <meta charset="utf-8" />
         <title>Dashboard | Skote - Responsive Bootstrap 4 Admin Dashboard</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,18 +19,20 @@
         <link href="{% static 'css/app.min.css' %}" id="app-style" rel="stylesheet" type="text/css" />
         <!-- Main Css-->
         <link href="{% static 'css/main.css' %}" id="app-style" rel="stylesheet" type="text/css" />
-
-
     </head>
 
-    <body data-sidebar="dark">
+    {% include 'navbar.html' %}
+
+
+
+    <!-- <body data-sidebar="dark"> -->
 
         <!-- Begin page -->
         <!-- <div id="layout-wrapper"> -->
 
-            <header id="page-topbar">
+            <!-- <header id="page-topbar">
                 <div class="navbar-header">
-                    <div class="d-flex">
+                    <div class="d-flex"> -->
                         <!-- LOGO -->
                         <!-- <div class="navbar-brand-box"> -->
                             <!-- <a href="index.html" class="logo logo-dark">
@@ -54,16 +54,17 @@
                             </a> -->
                         <!-- </div> -->
 
-                        <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
-                            <i class="fa fa-fw fa-bars"></i>
+                        <!-- <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
+                            <a href="{% url 'home' %}"><i class="fa fa-fw bx bxs-home "></i></a>
                         </button>
 
                         <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
                             <i class="fa bx bx-line-chart "></i>
                         </button>
 
-                        <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn" href = "{% url 'ingredients:stocklist' %}">
-                            <i class="fa fa-fw bx bx-food-menu "></i>
+                        <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn" >
+                            <a href="{% url 'ingredients:stocklist' %}"><i class="fa fa-fw bx bx-food-menu "></i></a>
+                            
                         </button>
 
                         <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
@@ -72,7 +73,7 @@
 
                         <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn">
                             <i class="fa fa-fw bx bxs-calculator"></i>
-                        </button>
+                        </button> -->
 
                         <!-- App Search-->
                         <!-- <form class="app-search d-none d-lg-block">
@@ -215,9 +216,9 @@
                             </div>
                         </div> -->
                         <!-- /Megamenu dropdown ---------------------------------------------------------------------------------------------------------------- --> 
-                    </div>
+                    <!-- </div>
 
-                    <div class="d-flex">
+                    <div class="d-flex"> -->
 
                         <!-- <div class="dropdown d-inline-block d-lg-none ml-2">
                             <button type="button" class="btn header-item noti-icon waves-effect" id="page-header-search-dropdown"
@@ -240,17 +241,17 @@
                             </div>
                         </div> -->
 
-                        <div class="dropdown d-inline-block">
+                        <!-- <div class="dropdown d-inline-block">
                             <button type="button" class="btn header-item waves-effect"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img class="" src="{% static 'img/us.jpg' %} " alt="Header Language" height="16">
                             </button>
-                            <div class="dropdown-menu dropdown-menu-right">
+                            <div class="dropdown-menu dropdown-menu-right"> -->
                     
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
                                     <img src="{% static 'img/spain.jpg' %} " alt="user-image" class="mr-1" height="12"> <span class="align-middle">Spanish</span>
-                                </a>
+                                </a> -->
 
                                 <!-- item-->
                                 <!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
@@ -266,8 +267,8 @@
                                 <!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
                                     <img src="{% static 'img/russia.jpg' %} " alt="user-image" class="mr-1" height="12"> <span class="align-middle">Russian</span>
                                 </a> -->
-                            </div>
-                        </div>
+                            <!-- </div>
+                        </div> -->
 
                         <!-- Second item next to the flag element ---------------------------------------------------------------------------------------------------------- -->
 <!-- 
@@ -331,7 +332,7 @@
                             </button>
                         </div> -->
 
-                        <div class="dropdown d-inline-block">
+                        <!-- <div class="dropdown d-inline-block">
                             <button type="button" class="btn header-item noti-icon waves-effect" id="page-header-notifications-dropdown"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <h6><span class="badge badge-danger badge-pill">13</span></h6>
@@ -394,7 +395,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </a>
+                                    </a> -->
 
                                     <!-- <a href="" class="text-reset notification-item">
                                         <div class="media">
@@ -409,7 +410,7 @@
                                             </div>
                                         </div>
                                     </a> -->
-                                </div>
+                                <!-- </div>
                                 <div class="p-2 border-top">
                                     <a class="btn btn-sm btn-link font-size-14 btn-block text-center" href="javascript:void(0)">
                                         <i class="mdi mdi-arrow-right-circle mr-1"></i> View All..
@@ -426,13 +427,13 @@
                                 <span class="d-none d-xl-inline-block ml-1">Henry</span>
                                 <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
                             </button>
-                            <div class="dropdown-menu dropdown-menu-right">
+                            <div class="dropdown-menu dropdown-menu-right"> -->
                                 <!-- item-->
-                                <a class="dropdown-item" href="#"><i class="bx bx-user font-size-16 align-middle mr-1"></i> Profile</a>
+                                <!-- <a class="dropdown-item" href="#"><i class="bx bx-user font-size-16 align-middle mr-1"></i> Profile</a> -->
                                 <!-- <a class="dropdown-item" href="#"><i class="bx bx-wallet font-size-16 align-middle mr-1"></i> My Wallet</a> -->
-                                <a class="dropdown-item d-block" href="#"><span class="badge badge-success float-right">11</span><i class="bx bx-wrench font-size-16 align-middle mr-1"></i> Settings</a>
+                                <!-- <a class="dropdown-item d-block" href="#"><span class="badge badge-success float-right">11</span><i class="bx bx-wrench font-size-16 align-middle mr-1"></i> Settings</a> -->
                                 <!-- <a class="dropdown-item" href="#"><i class="bx bx-lock-open font-size-16 align-middle mr-1"></i> Lock screen</a> -->
-                                <div class="dropdown-divider"></div>
+                                <!-- <div class="dropdown-divider"></div>
                                 <a class="dropdown-item text-danger" href="#"><i class="bx bx-power-off font-size-16 align-middle mr-1 text-danger"></i> Logout</a>
                             </div>
                         </div>
@@ -445,7 +446,7 @@
             
                     </div>
                 </div>
-            </header> 
+            </header>  -->
 
 <!-- =================================================================================== Left Sidebar Start ============================================================-->
 <!-- <div class="vertical-menu">
