--- a/restaurant/templates/ingredients/base.html
+++ b/restaurant/templates/ingredients/base.html
@@ -1,19 +1,233 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-{% block head_content %}{% endblock%}
-{% load static %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" crossorigin="anonymous" />
-    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-</head>
+    
+            <!-- App favicon -->
+    <link rel="shortcut icon" href="{% static 'img/logo_laspoteiros.jpeg' %}">
 
-<body>
-    {% block container %} {% endblock%}    
+            <!-- Bootstrap Css -->
+    <link href="{% static 'css/bootstrap.min.css' %}" id="bootstrap-style" rel="stylesheet" type="text/css" />
+            <!-- Icons Css -->
+    <link href="{% static 'css/icons.css' %}" rel="stylesheet" type="text/css" />
+            <!-- App Css-->
+    <link href="{% static 'css/app.min.css' %}" id="app-style" rel="stylesheet" type="text/css" />
+            <!-- Main Css-->
+    <link href="{% static 'css/main.css' %}" id="app-style" rel="stylesheet" type="text/css" />                
+
+    {% include 'navbar.html' %}
+
+                
+
+
+    <!-- -------------------------------------------- START OF CONTENT  ------------------------------------------ -->
+
+    {% block table-temporary%}{% endblock %}
+
+    <div class="offset-0 page-content">
+        <div class="container-fluid">
+
+            <!-- start page title -->
+            <div class="row">
+                <div class="col-12">
+                    <div class="page-title-box d-flex align-items-center justify-content-between">
+                        {% block content-title %}
+                        {% endblock %}
+                        <!-- <h4 class="mb-0 font-size-18">Dashboard</h4> -->
+
+                        <div class="page-title-right">
+                            <ol class="breadcrumb m-0">
+                                <li class="breadcrumb-item"><a href="javascript: void(0);">Dashboards</a></li>
+                                <li class="breadcrumb-item active">Dashboard</li>
+                            </ol>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!-- end page title -->
+
+            <div class="row">
+                <div class="col-xl-4">
+                    <div class="card overflow-hidden">
+                        <div class="poteiros">
+                            <div class="row">   
+                                <!-- <div class="col-7"> -->
+                                    <div class="text-primary p-3 ml-2" >
+                                        <h5 class="text-primary">Welcome Back !</h5>
+                                        <p>Restaurant Dashboard</p>
+                                    </div>
+                                    <!-- </div> -->
+                                    <div class="col-5 align-self-end">
+                                        <img src="{% static 'img/logo_laspoteiros.jpeg' %}" alt="" class="img-fluid" style="max-height: 153px">
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="card-body pt-0">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="avatar-md profile-user-wid mb-4">
+                                        <img src="{% static 'img/avatar-1.jpg' %}" alt="" class="img-thumbnail rounded-circle">
+                                    </div>
+                                    <h5 class="font-size-15 text-truncate">Lionel Messi</h5>
+                                    <p class="text-muted mb-0 text-truncate">Admin</p>
+                                </div>
+
+                                <div class="col-sm-8">
+                                    <div class="pt-4">
+
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <h5 class="font-size-15">125</h5>
+                                                <p class="text-muted mb-0">Projects</p>
+                                            </div>
+                                            <div class="col-6">
+                                                <h5 class="font-size-15">$1245</h5>
+                                                <p class="text-muted mb-0">Revenue</p>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="mt-4">
+                                            <a href="" class="btn btn-primary waves-effect waves-light btn-sm">View Profile <i class="mdi mdi-arrow-right ml-1"></i></a>
+                                        </div> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title mb-4">Monthly Earning</h4>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <p class="text-muted">This month</p>
+                                    <h3>$34,252</h3>
+                                    <p class="text-muted"><span class="text-success mr-2"> 12% <i class="mdi mdi-arrow-up"></i> </span> From previous period</p>
+
+                                    <div class="mt-4">
+                                        <a href="" class="btn btn-primary waves-effect waves-light btn-sm">View More <i class="mdi mdi-arrow-right ml-1"></i></a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="mt-4 mt-sm-0">
+                                        <div id="radialBar-chart" class="apex-charts"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <p class="text-muted mb-0">We craft digital, graphic and dimensional thinking.</p> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-8">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="card mini-stats-wid">
+                                <div class="card-body">
+                                    <div class="media">
+                                        <div class="media-body">
+                                            <p class="text-muted font-weight-medium">Orders</p>
+                                            <h4 class="mb-0">1,235</h4>
+                                        </div>
+
+                                        <div class="mini-stat-icon avatar-sm rounded-circle bg-primary align-self-center">
+                                            <span class="avatar-title">
+                                                <i class="bx bx-copy-alt font-size-24"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card mini-stats-wid">
+                                <div class="card-body">
+                                    <div class="media">
+                                        <div class="media-body">
+                                            <p class="text-muted font-weight-medium">Revenue</p>
+                                            <h4 class="mb-0">$35,723</h4>
+                                        </div>
+
+                                        <div class="avatar-sm rounded-circle bg-primary align-self-center mini-stat-icon">
+                                            <span class="avatar-title rounded-circle bg-primary">
+                                                <i class="bx bx-archive-in font-size-24"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card mini-stats-wid">
+                                <div class="card-body">
+                                    <div class="media">
+                                        <div class="media-body">
+                                            <p class="text-muted font-weight-medium">Average Ticket</p>
+                                            <h4 class="mb-0">$26.200</h4>
+                                        </div>
+
+                                        <div class="avatar-sm rounded-circle bg-primary align-self-center mini-stat-icon">
+                                            <span class="avatar-title rounded-circle bg-primary">
+                                                <i class="bx bx-purchase-tag-alt font-size-24"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end row -->
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title mb-4 float-sm-left">Email Sent</h4>
+                            <div class="float-sm-right">
+                                <ul class="nav nav-pills">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Week</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Month</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="#">Year</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div id="stacked-column-chart" class="apex-charts" dir="ltr"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        <!-- JAVASCRIPT -->
+        <script src="{% static 'scripts/jquery.min.js' %}"></script>
+        <script src="{% static 'scripts/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'scripts/metisMenu.min.js' %}"></script>
+        <script src="{% static 'scripts/simplebar.min.js' %}"></script>
+        <script src="{% static 'scripts/waves.min.js' %}"></script>
+
+        <!-- apexcharts -->
+        <script src="{% static 'scripts/apexcharts.min.js' %}"></script>
+
+        <script src="{% static 'scripts/dashboard.init.js' %}"></script>
+
+        <!-- App js -->
+        <!-- <script src="{% static 'scripts/app.js' %}"></script> -->
 </body>
+
+
+
+
+{% block head_content %}{% endblock%}
+
+
+
+{% block container %} {% endblock%}  
+
 
 
 </html>
