Icons from navbar resized and tooltip included

--- a/restaurant/templates/home.html
+++ b/restaurant/templates/home.html
@@ -1157,7 +1157,7 @@
                                                                 <label class="custom-control-label" for="customCheck2">&nbsp;</label>
                                                             </div>
                                                         </td>
-                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">#SK2540</a> </td>
+                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">2540</a> </td>
                                                         <td>Neal Matthews</td>
                                                         <td>
                                                             07 Oct, 2019
@@ -1186,7 +1186,7 @@
                                                                 <label class="custom-control-label" for="customCheck3">&nbsp;</label>
                                                             </div>
                                                         </td>
-                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">#SK2541</a> </td>
+                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">2541</a> </td>
                                                         <td>Jamal Burnett</td>
                                                         <td>
                                                             07 Oct, 2019
@@ -1215,7 +1215,7 @@
                                                                 <label class="custom-control-label" for="customCheck4">&nbsp;</label>
                                                             </div>
                                                         </td>
-                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">#SK2542</a> </td>
+                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">2542</a> </td>
                                                         <td>Juan Mitchell</td>
                                                         <td>
                                                             06 Oct, 2019
@@ -1243,7 +1243,7 @@
                                                                 <label class="custom-control-label" for="customCheck5">&nbsp;</label>
                                                             </div>
                                                         </td>
-                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">#SK2543</a> </td>
+                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">2543</a> </td>
                                                         <td>Barry Dick</td>
                                                         <td>
                                                             05 Oct, 2019
@@ -1271,7 +1271,7 @@
                                                                 <label class="custom-control-label" for="customCheck6">&nbsp;</label>
                                                             </div>
                                                         </td>
-                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">#SK2544</a> </td>
+                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">2544</a> </td>
                                                         <td>Ronald Taylor</td>
                                                         <td>
                                                             04 Oct, 2019
@@ -1299,7 +1299,7 @@
                                                                 <label class="custom-control-label" for="customCheck7">&nbsp;</label>
                                                             </div>
                                                         </td>
-                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">#SK2545</a> </td>
+                                                        <td><a href="javascript: void(0);" class="text-body font-weight-bold">2545</a> </td>
                                                         <td>Jacob Hunter</td>
                                                         <td>
                                                             04 Oct, 2019
@@ -1345,7 +1345,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <p class="mb-2">Product id: <span class="text-primary">#SK2540</span></p>
+                                <p class="mb-2">Product id: <span class="text-primary">2540</span></p>
                                 <p class="mb-4">Billing Name: <span class="text-primary">Neal Matthews</span></p>
 
                                 <div class="table-responsive">
