--- a/restaurant/templates/navbar.html
+++ b/restaurant/templates/navbar.html
@@ -19,11 +19,11 @@
                 
                 
                 <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn"data-toggle="tooltip" data-placement="bottom" title="Sales">
-                    <i class="fa bx bx-line-chart "></i>
+                    <a href="{% url 'sales' %}"><i class="fa bx bx-line-chart "></i></a>
                 </button>
                 
                 <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn"data-toggle="tooltip" data-placement="bottom" title="Expenses">
-                    <i class="fa fa-fw bx bxs-calculator"></i>
+                    <a href="{% url 'expenses' %}"><i class="fa fa-fw bx bxs-calculator"></i></a>
                 </button>
                 
                 <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn" data-toggle="tooltip" data-placement="bottom" title="Stock">
@@ -31,7 +31,7 @@
                 </button>
 
                 <button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect" id="vertical-menu-btn"data-toggle="tooltip" data-placement="bottom" title="Vendors">
-                    <i class="fa fa-fw bx bxs-truck "></i>
+                    <a href="{% url 'vendors' %}"><i class="fa fa-fw bx bxs-truck "></i></a>
                 </button>
 
 
@@ -141,7 +141,7 @@
                         <a class="dropdown-item d-block" href="#"><span class="badge badge-success float-right">11</span><i class="bx bx-wrench font-size-16 align-middle mr-1"></i> Settings</a>
                         <!-- <a class="dropdown-item" href="#"><i class="bx bx-lock-open font-size-16 align-middle mr-1"></i> Lock screen</a> -->
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-danger" href="#"><i class="bx bx-power-off font-size-16 align-middle mr-1 text-danger"></i> Logout</a>
+                        <a class="dropdown-item text-danger" href="{% url 'landingpage' %}" ><i class="bx bx-power-off font-size-16 align-middle mr-1 text-danger"></i> Logout</a>
                     </div>
                 </div>
 
